--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <option value="Kolkata">Kolkata</option>
               <option value="Howrah">Howrah</option>
             </select>
-            <label for="city">CITY<span>*</span></label>
+            <label for="city" class="list">CITY<span>*</span></label>
           </div>
         </div>
         <div class="row">
@@ -109,7 +109,7 @@
               <option value="Howrah">Howrah</option>
               <option value="North 24 Parganas">North 24 Parganas</option>
             </select>
-            <label for="zone">ZONE<span>*</span></label>
+            <label for="zone" class="list">ZONE<span>*</span></label>
           </div>
           <div class="input-field col s12 m6">
             <input
@@ -211,7 +211,7 @@
 
         <div class="row">
           <div class="input-field col s12 m6 pujaTypeFiled">
-            <label class="pujatype">PUJA TYPE<span>*</span></label>
+            <label class="pujatype list">PUJA TYPE<span>*</span></label>
             <p>
               <label>
                 <input
