--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
               required
               pattern="[A-Za-z\s]+"
             />
-            <label for="contact_name_1">First Contact Name<span>*</span></label>
+            <label for="contact_name_1">FIRST CONTACT NAME<span>*</span></label>
           </div>
           <div class="input-field col s12 m6">
             <input
@@ -471,7 +471,7 @@
               pattern="\d{10}"
             />
             <label for="contact_phone_1"
-              >First Contact Phone Number<span>*</span></label
+              >FIRST CONTACT PHONE NO<span>*</span></label
             >
           </div>
         </div>
@@ -487,7 +487,7 @@
               pattern="[A-Za-z\s]+"
             />
             <label for="contact_name_2"
-              >Second Contact Name<span>*</span></label
+              >SECOND CONTACT NAME<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -500,7 +500,7 @@
               pattern="\d{10}"
             />
             <label for="contact_phone_2"
-              >Second Contact Phone Number<span>*</span></label
+              >SECOND CONTACT PHONE NO<span>*</span></label
             >
           </div>
         </div>
@@ -514,7 +514,7 @@
               required
               pattern="[A-Za-z\s]+"
             />
-            <label for="contact_name_3">Third Contact Name<span>*</span></label>
+            <label for="contact_name_3">THIRD CONTACT NAME<span>*</span></label>
           </div>
           <div class="input-field col s12 m6">
             <input
@@ -526,7 +526,7 @@
               pattern="\d{10}"
             />
             <label for="contact_phone_3"
-              >Third Contact Phone Number<span>*</span></label
+              >THIRD CONTACT PHONE NO<span>*</span></label
             >
           </div>
         </div>
