--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   </head>
   <body>
     <div class="banner">
-      <img src="./img/poster2.jpg" alt="Banner Image" />
+      <img src="./img/agency_banner.jpg" alt="Banner Image" />
     </div>
+    <!-- <div class="banner">
+      <img src="./img/poster2.jpg" alt="Banner Image" />
+    </div> -->
     <div class="container">
       <h4>︵‿︵‿୨ রেজিস্ট্রেশন ফর্ম ୧‿︵‿︵</h4>
       <!-- দুর্গা পূজা  -->
@@ -808,9 +811,9 @@
         </button>
       </form>
     </div>
-    <div class="banner">
+    <!-- <div class="banner">
       <img src="./img/poster1.jpg" alt="Banner Image" />
-    </div>
+    </div> -->
     <!-- footer -->
     <footer>
       <div class="footer-container">
