--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               required
             />
             <label for="theme_artists_name"
-              >THEME ARTIST'S NAME<span>*</span></label
+              >THEME ARTIST NAME<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -552,7 +552,7 @@
               pattern="\d{10}"
             />
             <label for="theme_artists_phone"
-              >THEME ARTIST'S PHONE NO<span>*</span></label
+              >THEME ARTIST PHONE NO<span>*</span></label
             >
           </div>
         </div>
@@ -567,7 +567,7 @@
               required
             />
             <label for="light_artists_name"
-              >LIGHT ARTIST'S NAME<span>*</span></label
+              >LIGHT ARTIST NAME<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -580,7 +580,7 @@
               pattern="\d{10}"
             />
             <label for="light_artists_phone"
-              >LIGHT ARTIST'S PHONE NO<span>*</span></label
+              >LIGHT ARTIST PHONE NO<span>*</span></label
             >
           </div>
         </div>
@@ -595,7 +595,7 @@
               required
             />
             <label for="music_artists_name"
-              >MUSIC ARTIST'S NAME<span>*</span></label
+              >MUSIC ARTIST NAME<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -608,7 +608,7 @@
               pattern="\d{10}"
             />
             <label for="music_artists_phone"
-              >MUSIC ARTIST'S PHONE NO<span>*</span></label
+              >MUSIC ARTIST PHONE NO<span>*</span></label
             >
           </div>
         </div>
@@ -622,7 +622,7 @@
               placeholder="Enter Your Decorator's Name"
               required
             />
-            <label for="decorator_name">DECORATOR'S NAME<span>*</span></label>
+            <label for="decorator_name">DECORATOR NAME<span>*</span></label>
           </div>
           <div class="input-field col s12 m6">
             <input
@@ -634,7 +634,7 @@
               pattern="\d{10}"
             />
             <label for="decorator_phone"
-              >DECORATOR'S PHONE NO<span>*</span></label
+              >DECORATOR PHONE NO<span>*</span></label
             >
           </div>
         </div>
