--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               type="text"
               placeholder="Describe Your Puja Theme Details In Short / Type NA to skip"
             />
-            <label for="theme_details">THEME DETAILS</label>
+            <label for="theme_details">THEME DETAILS (ENGLISH)</label>
           </div>
           <div class="input-field col s12 m6">
             <input
@@ -744,7 +744,7 @@
         <div class="row">
           <div class="input-field col s12 m6">
             <input
-              name="Club_Bank_Details"
+              name="Club_Bank_Name"
               id="club_bank_details"
               type="text"
               placeholder="Enter Your Club's Bank Account Name."
