--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               id="state"
               type="text"
               placeholder="Write Your State"
-              pattern="[A-Za-z]+"
+              value="WEST BENGAL"
               required
             />
             <label for="state">STATE<span>*</span></label>
