--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
               id="website_name"
               type="text"
               placeholder="Enter Your Puja Website Name. Write NA, if don't have."
-              pattern="^\S+$"
               required
             />
             <label for="website_name">WEBSITE NAME<span>*</span></label>
@@ -207,7 +206,7 @@
             <input
               name="Google_Map_Location"
               id="google_map_location"
-              type="url"
+              type="text"
               placeholder="Enter Your Puja's Google Map Location Link"
               required
             />
@@ -235,7 +234,7 @@
             <input
               name="Yt_Link"
               id="youtube_link"
-              type="url"
+              type="text"
               placeholder="Enter Your Link. Write NA, If You Don't Have"
             />
             <label for="youtube_link">YOUTUBE ACCOUNT / PAGE LINK</label>
@@ -244,7 +243,7 @@
             <input
               name="Fb_Link"
               id="facebook_link"
-              type="url"
+              type="text"
               placeholder="Enter Your Link. Write NA, If You Don't Have"
             />
             <label for="facebook_link">FACEBOOK ACCOUNT / PAGE LINK</label>
@@ -256,7 +255,7 @@
             <input
               name="Ig_Link"
               id="instagram_link"
-              type="url"
+              type="text"
               placeholder="Enter Your Link. Write NA, If You Don't Have"
             />
             <label for="instagram_link">INSTAGRAM ACCOUNT / PAGE LINK</label>
@@ -740,8 +739,42 @@
             >
           </div>
         </div>
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              name="Theme_Name_2021"
+              id="theme_name_one"
+              type="text"
+              placeholder="Enter The Theme Name For Year 2021 / 'NA' For None"
+              required
+            />
+            <label for="theme_name_one">THEME NAME (2021)<span>*</span></label>
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              name="Theme_Name_2022"
+              id="theme_name_two"
+              type="text"
+              placeholder="Enter The Theme Name For Year 2022 / 'NA' For None"
+              required
+            />
+            <label for="theme_name_two">THEME NAME (2022)<span>*</span></label>
+          </div>
+        </div>
 
         <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              name="Theme_Name_2023"
+              id="theme_name_three"
+              type="text"
+              placeholder="Enter The Theme Name For Year 2023 / 'NA' For None"
+              required
+            />
+            <label for="theme_name_three"
+              >THEME NAME (2023)<span>*</span></label
+            >
+          </div>
           <div class="input-field col s12 m6">
             <input
               name="Club_Bank_Name"
@@ -754,6 +787,9 @@
               >CLUB BANK DETAILS (BANK NAME)<span>*</span></label
             >
           </div>
+        </div>
+
+        <div class="row">
           <div class="input-field col s12 m6">
             <input
               name="Account_No"
@@ -763,6 +799,17 @@
               required
             />
             <label for="account_no">ACCOUNT NO.<span>*</span></label>
+          </div>
+
+          <div class="input-field col s12 m6">
+            <input
+              name="Branch_Name"
+              id="branch_name"
+              type="text"
+              placeholder="Enter Your Club's Bank Branch Name."
+              required
+            />
+            <label for="branch_name">BRANCH NAME<span>*</span></label>
           </div>
         </div>
 
@@ -777,19 +824,6 @@
             />
             <label for="ifsc_code_no">IFSC CODE NO.<span>*</span></label>
           </div>
-          <div class="input-field col s12 m6">
-            <input
-              name="Branch_Name"
-              id="branch_name"
-              type="text"
-              placeholder="Enter Your Club's Bank Branch Name."
-              required
-            />
-            <label for="branch_name">BRANCH NAME<span>*</span></label>
-          </div>
-        </div>
-
-        <div class="row">
           <div class="input-field col s12 m6">
             <input
               name="Pan_Card_No"
