--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Puja_Name"
+              class="uppercase"
               id="puja_name"
               type="text"
               placeholder="Write Puja Name"
@@ -45,6 +46,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Address"
+              class="uppercase"
               id="address"
               type="text"
               placeholder="Write Short Address"
@@ -65,6 +67,7 @@
           <div class="input-field col s12 m6">
             <input
               name="District"
+              class="uppercase"
               id="district"
               type="text"
               placeholder="Write Your District"
@@ -126,6 +129,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Municipality"
+              class="uppercase"
               id="municipality"
               type="text"
               placeholder="Enter Your Municipality Name"
@@ -160,6 +164,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Police_Station"
+              class="uppercase"
               id="police_station"
               type="text"
               placeholder="Enter Your Police Station."
@@ -170,6 +175,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Nearest_Landmark"
+              class="uppercase"
               id="landmark"
               type="text"
               placeholder="Enter Your Nearest Landmark"
@@ -182,6 +188,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Post_Office"
+              class="uppercase"
               id="post_office"
               type="text"
               placeholder="Enter Your Post Office Name"
@@ -192,6 +199,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Website_Name"
+              class="uppercase"
               id="website_name"
               type="text"
               placeholder="Enter Your Puja Website Name. Write NA, if don't have."
@@ -306,6 +314,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Name"
+              class="uppercase"
               id="theme_name"
               type="text"
               placeholder="Enter Your Puja Theme Name"
@@ -332,6 +341,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Details"
+              class="uppercase"
               id="theme_details"
               type="text"
               placeholder="Describe Your Puja Theme Details In Short / Type NA to skip"
@@ -400,6 +410,7 @@
           <div class="input-field col s12 m6">
             <input
               name="President_Name"
+              class="uppercase"
               id="presidents_name"
               type="text"
               placeholder="Enter Your President's Name"
@@ -426,6 +437,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Secretaryary_Name"
+              class="uppercase"
               id="secretary_name"
               type="text"
               placeholder="Enter Your Secretary's Name"
@@ -451,6 +463,7 @@
           <div class="input-field col s12 m6">
             <input
               name="First_Contact_Name"
+              class="uppercase"
               id="contact_name_1"
               type="text"
               placeholder="Enter Your First Contact Name"
@@ -478,6 +491,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Second_Contact_Name"
+              class="uppercase"
               id="contact_name_2"
               type="text"
               placeholder="Enter Your Second Contact Name"
@@ -506,6 +520,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Third_Contact_Name"
+              class="uppercase"
               id="contact_name_3"
               type="text"
               placeholder="Enter Your Third Contact Name"
@@ -532,6 +547,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Artists_Name"
+              class="uppercase"
               id="theme_artists_name"
               type="text"
               placeholder="Enter Your Theme Artist's Name"
@@ -559,6 +575,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Light_Artists_Name"
+              class="uppercase"
               id="light_artists_name"
               type="text"
               placeholder="Enter Your Light Artist's Name"
@@ -586,6 +603,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Music_Artists_Name"
+              class="uppercase"
               id="music_artists_name"
               type="text"
               placeholder="Enter Your Music Artist's Name"
@@ -613,6 +631,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Decorator_Name"
+              class="uppercase"
               id="decorator_name"
               type="text"
               placeholder="Enter Your Decorator's Name"
@@ -647,6 +666,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Social_Work"
+              class="uppercase"
               id="social_work"
               type="text"
               placeholder="Enter Your Past Year's Social Works / 'NA' For None"
@@ -700,7 +720,7 @@
               name="Last_3_Years_Budget"
               id="last_3_years_budget"
               type="text"
-              placeholder="Enter Your Last 3 Years Puja Budget in approx."
+              placeholder="Enter Your Last 3 Years Puja Budget in Approx Separated By Commas."
               required
             />
             <label for="last_3_years_budget"
@@ -739,6 +759,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Name_2021"
+              class="uppercase"
               id="theme_name_one"
               type="text"
               placeholder="Enter The Theme Name For Year 2021 / 'NA' For None"
@@ -749,6 +770,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Name_2022"
+              class="uppercase"
               id="theme_name_two"
               type="text"
               placeholder="Enter The Theme Name For Year 2022 / 'NA' For None"
@@ -762,6 +784,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Theme_Name_2023"
+              class="uppercase"
               id="theme_name_three"
               type="text"
               placeholder="Enter The Theme Name For Year 2023 / 'NA' For None"
@@ -774,6 +797,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Club_Bank_Name"
+              class="uppercase"
               id="club_bank_details"
               type="text"
               placeholder="Enter Your Club's Bank Account Name."
@@ -800,6 +824,7 @@
           <div class="input-field col s12 m6">
             <input
               name="Branch_Name"
+              class="uppercase"
               id="branch_name"
               type="text"
               placeholder="Enter Your Club's Bank Branch Name."
