--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Durga Puja Registration Form</title>
     <!-- Materialize CSS -->
     <link
@@ -18,7 +19,7 @@
       <img src="./img/agency_banner.png" alt="Banner Image" />
     </div>
     <div class="container">
-      <h4>︵‿︵‿୨ REGISTRATION FORM ୧‿︵‿︵</h4>
+      <h4>❀❀❀ REGISTRATION FORM ❀❀❀</h4>
       <form autocomplete="off" method="post" name="google-sheet">
         <div class="row">
           <div class="input-field col s12 m6">
@@ -856,7 +857,48 @@
             <label for="pan_card_no">PAN CARD NO.<span>*</span></label>
           </div>
         </div>
-
+        <div class="row">
+          <div class="col s12 m6">
+            <ul>
+              <li>
+                Note: <span>*</span> Hard Copy Of All Documents Required With
+                Number Of Xerox As Mentioned.
+              </li>
+              <li>Xerox</li>
+              <li>1. Application letter - 40 pc</li>
+              <li>2. Theme Paper - 40 pc</li>
+              <li>3. Social Activities- 40 pc</li>
+              <li>4. Road Map - 40 pc</li>
+              <li>5. Club Stamp 2 pc</li>
+              <li>6. Letterhead - 20 pc</li>
+              <li>
+                7. Idol Photo (2023) - 10 pc & Pandal Photo (2023) - 10 pc
+              </li>
+              <li>8. Bank Details - Cancelled Cheque / Passbook - 10 pc</li>
+              <li>9. Puja Permission 2023 - 10 pc</li>
+              <li>10. Envelops - 20 pc</li>
+              <li>11. PAN Card - 10 pc</li>
+            </ul>
+          </div>
+          <div class="col s12 m6">
+            <ul>
+              <li>
+                Note: <span>*</span> Soft Copy Of All Documents Required To be
+                Mailed @
+                <a href="mailto:jagency2022@gmail.com">jagency2022@gmail.com</a
+                >.
+              </li>
+              <li>1. Application letter</li>
+              <li>2. Theme Paper ( English & Bengali)</li>
+              <li>3. Social Activities</li>
+              <li>4. Road Map</li>
+              <li>5. Idol Photo & Pandal Photo (2023)</li>
+              <li>6. Bank Details - Cancelled Cheque / Passbook</li>
+              <li>7. PAN Card</li>
+              <li>8. Theme Video 2023</li>
+            </ul>
+          </div>
+        </div>
         <button
           class="btn waves-effect waves-light"
           name="submit"
