--- a/thankyou.html
+++ b/thankyou.html
@@ -61,7 +61,7 @@
 
         if (countdown === 0) {
           clearInterval(timer);
-          window.location.href = "index.html";
+          window.location.href = "https://jagency.netlify.app";
         }
       }, 1000);
     </script>
