--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
       <h4>❀❀❀ REGISTRATION FORM ❀❀❀</h4>
-      <form autocomplete="off" method="post" name="google-sheet">
+      <form autocomplete="off" method="post" name="google-sheet" id="puja-form">
         <div class="row">
           <div class="input-field col s12 m6">
             <input
@@ -860,11 +860,10 @@
         <div class="row">
           <div class="col s12 m6">
             <ul>
-              <li>
+              <li style="color: red">
                 Note: <span>*</span> Hard Copy Of All Documents Required With
                 Number Of Xerox As Mentioned.
               </li>
-              <li>Xerox</li>
               <li>1. Application letter - 40 pc</li>
               <li>2. Theme Paper - 40 pc</li>
               <li>3. Social Activities- 40 pc</li>
@@ -882,10 +881,19 @@
           </div>
           <div class="col s12 m6">
             <ul>
-              <li>
+              <li style="color: red">
                 Note: <span>*</span> Soft Copy Of All Documents Required To be
                 Mailed @
-                <a href="mailto:jagency2022@gmail.com">jagency2022@gmail.com</a
+                <a
+                  href="mailto:jagency2022@gmail.com?subject=Registration Soft Copy"
+                  target="_blank"
+                  >jagency2022@gmail.com</a
+                >
+                Or WhatsApp Us @
+                <a
+                  href="https://wa.me/+919432120243?text=Registration Soft Copy"
+                  target="_blank"
+                  >9432120243</a
                 >.
               </li>
               <li>1. Application letter</li>
