--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
               required
             />
             <label for="electric_consumption_2021"
-              >ELECTRIC CONSUMPTION YEAR 2021<span>*</span></label
+              >ELECTRICAL CONSUMPTION YEAR 2021<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -699,7 +699,7 @@
               required
             />
             <label for="electric_consumption_2022"
-              >ELECTRIC CONSUMPTION YEAR 2022<span>*</span></label
+              >ELECTRICAL CONSUMPTION YEAR 2022<span>*</span></label
             >
           </div>
         </div>
@@ -713,7 +713,7 @@
               required
             />
             <label for="electric_consumption_2023"
-              >ELECTRIC CONSUMPTION YEAR 2023<span>*</span></label
+              >ELECTRICAL CONSUMPTION YEAR 2023<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
